Fix background cover when hovering in edit route in dark mode
Fixes #406

--- a/blackboard.less
+++ b/blackboard.less
@@ -334,6 +334,9 @@ input[type=color] {
   &:hover {
     background: #fcffc0;
     cursor: pointer;
+    .darkMode & {
+      background: #4c4f11;
+    }
   }
   input {
     margin-top: 2px;
